correction the slider alignment

--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 .slider-caption {
 
 
-
-    margin-bottom: 160px;
+    /* margin-bottom: 180px;  */
 
 
 }
